--- a/projects/styleguide/assets/css/styleguide.css
+++ b/projects/styleguide/assets/css/styleguide.css
@@ -57,7 +57,7 @@
 
 body {
   color: #3a2934;
-  font: 1em Gibson, Helvetica, sans-serif;
+  font: normal 1em Gibson, Helvetica, sans-serif;
   margin: 0;
   padding: 0;
 }
@@ -81,7 +81,7 @@ main {
 
 figcaption {
   color: #8e9299;
-  font: normal 0.75em Range Mono, monospace;
+  font: normal 0.75em "Range Mono", monospace;
   padding: 8px 0;
 }
 
@@ -114,7 +114,7 @@ ul {
   background: white;
   border-radius: 2px;
   display: inline;
-  font: normal 0.6em Range Mono, monospace;
+  font: normal 0.6em "Range Mono", monospace;
   margin: 0 5px;
   padding: 3px 5px;
   position: absolute;
@@ -185,11 +185,11 @@ ul {
 }
 
 .calendas {
-  font-family: Calendas Plus;
+  font-family: "Calendas Plus";
 }
 
 .gibson {
-  font-family: Gibson;
+  font-family: "Gibson";
   font-weight: 100;
 }
 
