--- a/projects/styleguide/assets/css/styleguide.css
+++ b/projects/styleguide/assets/css/styleguide.css
@@ -8,8 +8,6 @@
          url('../fonts/gibson_light/Gibson-Light-webfont.woff') format('woff'),
          url('../fonts/gibson_light/Gibson-Light-webfont.ttf') format('truetype'),
          url('../fonts/gibson_light/Gibson-Light-webfont.svg#gibsonlight') format('svg');
-    font-weight: normal;
-    font-style: normal;
 }
 
 @font-face {
@@ -22,9 +20,6 @@
          url('../fonts/gibson_semibold/Gibson-SemiBold-webfont.woff') format('woff'),
          url('../fonts/gibson_semibold/Gibson-SemiBold-webfont.ttf') format('truetype'),
          url('../fonts/gibson_semibold/Gibson-SemiBold-webfont.svg#gibsonsemibold') format('svg');
-    font-weight: normal;
-    font-style: normal;
-
 }
 
 @font-face {
@@ -35,9 +30,6 @@
          url('../fonts/calendas_plus/calendas_plus-webfont.woff') format('woff'),
          url('../fonts/calendas_plus/calendas_plus-webfont.ttf') format('truetype'),
          url('../fonts/calendas_plus/calendas_plus-webfont.svg#calendas_plusregular') format('svg');
-    font-weight: normal;
-    font-style: normal;
-
 }
 
 @font-face {
@@ -50,9 +42,6 @@
          url('../fonts/range_mono/range-mono-regular-webfont.woff') format('woff'),
          url('../fonts/range_mono/range-mono-regular-webfont.ttf') format('truetype'),
          url('../fonts/range_mono/range-mono-regular-webfont.svg#range_monoregular') format('svg');
-    font-weight: normal;
-    font-style: normal;
-
 }
 
 body {
@@ -190,7 +179,7 @@ ul {
 
 .gibson {
   font-family: "Gibson";
-  font-weight: 100;
+  font-weight: bold;
 }
 
 .range-mono {
